# shorelark

./: .gitignore  Cargo.toml  Readme.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: .gitignore  Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json
