cargo-features = ["edition2021"]

[package]
name = "lib-neural-network"
version = "0.1.0"
authors = ["Terry Weymouth <weymouth@umich.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_chacha = "0.3"
approx = "0.4"
