[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["Terry Weymouth <weymouth@umich.edu>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"]  }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
lib-simulation = { path = "../simulation" }
