[package]
name = "lib-simulation"
version = "0.1.0"
authors = ["Terry Weymouth <weymouth@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "1.1"
nalgebra = { version = "0.26", features = ["rand-no-std"] }
rand = "0.8"
lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-neural-network = { path = "../neural-network" }

